Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82477

QClipboard doesn't support custom mimeTypes

XMLWordPrintable

    • Android
    • c1086e1fa7 (qt/qtbase/dev) d726a463e7 (qt/qtbase/6.4) 882d368d07 (qt/qtbase/6.3) 882d368d07 (qt/tqtc-qtbase/6.3) d726a463e7 (qt/tqtc-qtbase/6.4) ba6b4bdac6 (qt/tqtc-qtbase/6.2) c624232d0d (qt/tqtc-qtbase/5.15)

      QClipboard (QAndroidPlatformClipboard::mimeData, QtAndroidClipboard::getClipboardMimeData) on Android only supports the standard text, html and urls mimeTypes. Other mimeTypes aren't handled correctly, not even inside the application.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtandroidteam Qt Android Team
            m3197d - -
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes