Android: document the supported clipboard mimetypes

Fixes: QTBUG-82477
Change-Id: I31a48acbf5cadc18dfe1fe9a54243b710f4f280c
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit c1086e1fa74d4c6a39c769390830acad9ac8bf46)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>